adds user name to submit paragraph and input field css validation when invalid

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     
 
     <div ng-show="myform.$valid && myform.submitted">
-    <h2>You Submitted this:</h2>
+    <h2>{{user.firstname}}, you've submitted this:</h2>
     
            <div>
               <p>Firstname: {{user.firstname}}</p>
